# pkg-config-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  aliases.js  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
pkg_config/: all.html  enum.Error.html  fn.get_variable.html  fn.probe_library.html  index.html  sidebar-items.js  struct.Config.html  struct.Library.html
src/: lib.rs
src/pkg_config/: lib.rs.html
tests/: disabled.rs  test.rs
tests/toml-good/: Cargo.toml
tests/toml-missing-key/: Cargo.toml
tests/toml-not-table/: Cargo.toml
tests/toml-version-not-string/: Cargo.toml
